@@ -12,7 +12,11 @@ do
 			  -o ${file%.*}.out -w -g -ggdb $*
 done
 
-SRC_DECODE="decoder/fastlog_decode_main.c decoder/fastlog_decode_list.c decoder/fastlog_decode_rb.c  decoder/fastlog_decode_file.c "
+SRC_DECODE="decoder/fastlog_decode_main.c \
+			decoder/fastlog_decode_list.c \
+			decoder/fastlog_decode_reprintf.c \
+			decoder/fastlog_decode_rb.c\
+			decoder/fastlog_decode_file.c "
 
 echo "Compile fastlog_decode_main.c -> decode.out"
 gcc $SRC $SRC_DECODE \
